Fixed spacing issues

--- a/client/styles/partials/_globals.scss
+++ b/client/styles/partials/_globals.scss
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  background: $lightGrey;
 }
 
 a {
@@ -39,10 +40,6 @@ a {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
-
-  //  div {
-  //     width: 100%;ƒunde
-  //   }
 }
 .wrapper {
   max-width: 1280px;
