--- a/client/styles/partials/_nav.scss
+++ b/client/styles/partials/_nav.scss
@@ -1,5 +1,6 @@
 .nav {
   &--container {
+    background: white;
     display: flex;
     justify-content: space-between;
     border-bottom: 3px solid $lightGrey;
