--- a/client/styles/partials/_profile.scss
+++ b/client/styles/partials/_profile.scss
@@ -1,32 +1,26 @@
 .profile {
   display: flex;
   flex: 1;
-  // background: $lightGrey;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .profile--header {
   padding: 10px 0;
-  margin-bottom: 20px;
 }
 
 .profile--questions {
   justify-content: space-between;
-  height: 300px;
   text-align: center;
   flex: 1;
   background: white;
-  max-width: 400px;
   display: flex;
   height: 350px;
   flex-direction: column;
-  padding: 40px 0;
+  padding: 40px;
   @include md {
     max-width: 49%;
     max-height: 600px;
-    // margin-top: 50px;
-    padding: 40px;
     border: 1px solid lightgray;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
@@ -34,9 +28,10 @@
 }
 
 .profile--answers {
+  background: none;
   @extend .profile--questions;
   text-align: left;
-  padding: 0;
+  padding: 20px;
   height: 100%;
   @include md {
     border: none;
@@ -48,7 +43,6 @@
 .profile--split {
   justify-content: center;
   flex-wrap: wrap;
-  margin-top: 30px;
 
   @include md {
     flex: 1;
